# Rchat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  PROTOCOL_SPECIFICATION.md  README.md  SECURITY.md  build_test.sh  generate_certs.sh  welcome.sh
.cargo/: audit.toml
client/: Cargo.toml
client/src/: main.rs  ui.rs
common/: Cargo.toml
common/src/: crypto.rs  lib.rs  protocol.rs
python-qt-client/: COMPATIBILITY.md  README.md  build.sh  main.py  pyproject.toml  requirements.txt  setup.sh  test_compatibility.py  test_connection.py  test_rust_compatibility.py
python-qt-client/rchat/: __init__.py  controller.py  crypto.py  network.py  protocol.py
python-qt-client/rchat-bindings/: Cargo.toml
python-qt-client/rchat-bindings/src/: lib.rs
python-qt-client/rchat/ui/: __init__.py  main_window.py  styles.py
server/: Cargo.toml
server/src/: chat.rs  main.rs
