[workspace]
members = ["server", "client", "common"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rchat Project"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
getrandom = "0.2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"
