[workspace]
members = ["server", "client", "common"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rchat Project"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
getrandom = "0.2"
# Crittografia estrema
chacha20poly1305 = { version = "0.10", features = ["std"] }  # Include XChaCha20-Poly1305
argon2 = { version = "0.5", features = ["std"] }  # Argon2id - best key derivation
blake3 = "1.5"  # BLAKE3 - hash moderno, più veloce e sicuro di SHA-2
sha2 = "0.10"   # SHA-512 per compatibility
sha3 = "0.10"   # SHA-3 (Keccak) - standard moderno
ed25519-dalek = { version = "2.1", features = ["rand_core"] }  # Ed25519 signing per forward secrecy
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }
