[package]
name = "rchat-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
arboard = "3.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }
