[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
