[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
subtle = "2.6"
hkdf = "0.12"
