[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rchat-qt-client"
version = "0.1.0"
description = "RChat Qt Client - End-to-End Encrypted Chat"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-Qt6>=6.5.0",
]

[tool.maturin]
module-name = "rchat_core"
bindings = "pyo3"
manifest-path = "rchat-bindings/Cargo.toml"
