[package]
name = "rchat-python"
version = "0.1.0"
edition = "2021"

# Questo è un workspace separato
[workspace]

[lib]
name = "rchat_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
common = { path = "../../common" }
bincode = "1.3"

[profile.release]
lto = true
opt-level = 3
